vistas y cambio de estilos

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -166,6 +166,12 @@
   <ItemGroup>
     <Resource Include="Images\images %283%29.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClasesBase\ClasesBase.csproj">
+      <Project>{06B5D334-C5D2-4747-82ED-D364119A5D9A}</Project>
+      <Name>ClasesBase</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
