--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -58,6 +58,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MenuPelicula.xaml.cs">
+      <DependentUpon>MenuPelicula.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="prueba.xaml.cs">
+      <DependentUpon>prueba.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -81,6 +87,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="MiMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MenuPelicula.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="prueba.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -183,13 +197,19 @@
     <Resource Include="images\prueba19.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClasesBase\ClasesBase.csproj">
-      <Project>{06B5D334-C5D2-4747-82ED-D364119A5D9A}</Project>
-      <Name>ClasesBase</Name>
-    </ProjectReference>
+    <Resource Include="images\CIME OPERA.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="images\CIME OPERA.png" />
+    <Resource Include="images\descarga.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\pruebaaa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClasesBase\ClasesBase.csproj">
+      <Project>{06b5d334-c5d2-4747-82ed-d364119a5d9a}</Project>
+      <Name>ClasesBase</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
