--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -58,8 +58,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MenuButaca.xaml.cs">
+      <DependentUpon>MenuButaca.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MenuPelicula.xaml.cs">
       <DependentUpon>MenuPelicula.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MenuProyecciones.xaml.cs">
+      <DependentUpon>MenuProyecciones.xaml</DependentUpon>
     </Compile>
     <Compile Include="prueba.xaml.cs">
       <DependentUpon>prueba.xaml</DependentUpon>
@@ -86,7 +92,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="MiMenu.xaml">
+    <Page Include="MenuButaca.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MenuProyecciones.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Principal.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -104,8 +118,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MiMenu.xaml.cs">
-      <DependentUpon>MiMenu.xaml</DependentUpon>
+    <Compile Include="Principal.xaml.cs">
+      <DependentUpon>Principal.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
