--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -58,6 +58,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Asignacion de Butacas.xaml.cs">
+      <DependentUpon>Asignacion de Butacas.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MenuButaca.xaml.cs">
       <DependentUpon>MenuButaca.xaml</DependentUpon>
     </Compile>
@@ -73,6 +76,10 @@
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
+    <Page Include="Asignacion de Butacas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="login1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
