cambios en el diseño

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -73,6 +73,9 @@
     <Compile Include="prueba.xaml.cs">
       <DependentUpon>prueba.xaml</DependentUpon>
     </Compile>
+    <Compile Include="resource.xaml.cs">
+      <DependentUpon>resource.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="prueba.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="resource.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
